# analyze-mob-4-me-data

./: Makefile  README.md  consts.py  main.py  pyproject.toml  requirements.txt  utils.py
.ipynb_checkpoints/: scraping draft-checkpoint.ipynb
data analysis/: mob4me preprocessing.ipynb  scraping draft.ipynb
data scraping/: consts.py  first_run.xlsx  second_run.xlsx
data_analysis/: clean_data.xlsx
data_scraping/: consts.py  main.py
